src/objects/Default_Sharing__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Default Sharings</relationshipLabel>
        <relationshipName>Default_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Meeting</label>
        <referenceTo>Board_Meeting__c</referenceTo>
        <relationshipLabel>Default Sharings</relationshipLabel>
        <relationshipName>Default_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Default Sharings</relationshipLabel>
        <relationshipName>Default_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Default_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Documents_Folder_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Documents Folder Template</label>
        <referenceTo>Documents_Folder_Template__c</referenceTo>
        <relationshipLabel>Default Sharings</relationshipLabel>
        <relationshipName>Default_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment</label>
        <referenceTo>Investment__c</referenceTo>
        <relationshipLabel>Default Sharings</relationshipLabel>
        <relationshipName>Default_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_For_Share__c</fullName>
        <label>Object For Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Default Sharings</relationshipLabel>
        <relationshipName>Default_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Round</label>
        <referenceTo>Round__c</referenceTo>
        <relationshipLabel>Default Sharings</relationshipLabel>
        <relationshipName>Default_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserOrGroup__c</fullName>
        <label>UserOrGroup</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Default_Sharings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Default Sharing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DS - {0000}</displayFormat>
        <label>Default Sharing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Sharings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>check_createdby</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(CreatedBy__c)</errorConditionFormula>
        <errorMessage>CreatedBy__c is empty</errorMessage>
    </validationRules>
</CustomObject>